fix icon alignment bug, move requirejsjs at the top of index.html (being at the bottom doesn't help when the page is useless without js)

--- a/src/client/frame-glue/src/style.css
+++ b/src/client/frame-glue/src/style.css
@@ -241,6 +241,9 @@ input.hidden-input {
 	position: absolute;
 }
 
+.ui-icon {
+	display: inline-block; !important
+}
 
 
 
